--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -156,6 +156,10 @@ jobs:
             npm install node-forge
             npm install --global yarn
             npm install --global pnpm
+            sudo apt-get update
+            sudo add-apt-repository ppa:deadsnakes/ppa -y
+            sudo apt-get install -y python3.11 python3.11-venv python3.11-dev
+            alias python3=/usr/bin/python3.11
 
       - when:
           condition:
@@ -266,6 +270,11 @@ jobs:
                 working_directory: ~/project/repository
                 command: |
                   set -e
+
+                  # Load prerequisites
+                  alias python3=/usr/bin/python3.11
+                  export NODE_OPTIONS=--max_old_space_size=7168
+
                   [ -f ~/project/.env ] && source ~/project/.env
                   [ -f ~/project/.env.ef_circleci ] && source ~/project/.env.ef_circleci
                   [ -n "<< pipeline.parameters.BUILD_DIR >>" ] && cd "<< pipeline.parameters.BUILD_DIR >>"
@@ -281,6 +290,11 @@ jobs:
                 working_directory: ~/project/repository
                 command: |
                   set -e
+
+                  # Load prerequisites and set nextjs standalone mode
+                  alias python3=/usr/bin/python3.11
+                  export NEXT_PRIVATE_STANDALONE=true
+                  export NODE_OPTIONS=--max_old_space_size=7168
 
                   # Function to log messages
                   log() {
@@ -301,7 +315,7 @@ jobs:
                   # Install dependencies
                   if [ -n "<< pipeline.parameters.PACKAGE_INSTALL_COMMAND >>" ]; then
                     log "Installing dependencies..."
-                    eval "NEXT_PRIVATE_STANDALONE=true << pipeline.parameters.PACKAGE_INSTALL_COMMAND >>"
+                    eval "<< pipeline.parameters.PACKAGE_INSTALL_COMMAND >>"
                   else
                     log "Error: PACKAGE_INSTALL_COMMAND is not set. Exiting."
                     exit 1
@@ -310,7 +324,7 @@ jobs:
                   # Build the project
                   if [ -n "<< pipeline.parameters.BUILD_COMMAND >>" ]; then
                     log "Building the project..."
-                    eval "NEXT_PRIVATE_STANDALONE=true << pipeline.parameters.BUILD_COMMAND >>"
+                    eval "<< pipeline.parameters.BUILD_COMMAND >>"
                   else
                     log "Error: BUILD_COMMAND is not set. Exiting."
                     exit 1
