--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -159,7 +159,6 @@ jobs:
             sudo apt-get update
             sudo add-apt-repository ppa:deadsnakes/ppa -y
             sudo apt-get install -y python3.11 python3.11-venv python3.11-dev
-            alias python3=/usr/bin/python3.11
 
       - when:
           condition:
@@ -273,6 +272,7 @@ jobs:
 
                   # Load prerequisites
                   alias python3=/usr/bin/python3.11
+                  export PYTHON=/usr/bin/python3.11
                   export NODE_OPTIONS=--max_old_space_size=7168
 
                   [ -f ~/project/.env ] && source ~/project/.env
@@ -293,6 +293,7 @@ jobs:
 
                   # Load prerequisites and set nextjs standalone mode
                   alias python3=/usr/bin/python3.11
+                  export PYTHON=/usr/bin/python3.11
                   export NEXT_PRIVATE_STANDALONE=true
                   export NODE_OPTIONS=--max_old_space_size=7168
 
