--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -158,6 +158,11 @@ jobs:
             npm install --global pnpm
             sudo apt-get update
 
+            # install bun
+            curl -fsSL https://bun.sh/install | bash
+            export BUN_INSTALL="$HOME/.bun"
+            export PATH="$BUN_INSTALL/bin:$PATH"
+
       - when:
           condition:
             not:
