--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -160,8 +160,9 @@ jobs:
 
             # install bun
             curl -fsSL https://bun.sh/install | bash
-            export BUN_INSTALL="$HOME/.bun"
-            export PATH="$BUN_INSTALL/bin:$PATH"
+            # Add Bun to .bashrc for persistence across steps
+            echo 'export BUN_INSTALL="$HOME/.bun"' >> $BASH_ENV
+            echo 'export PATH="$BUN_INSTALL/bin:$PATH"' >> $BASH_ENV
 
       - when:
           condition:
